--- a/doc/report/4-описания.tex
+++ b/doc/report/4-описания.tex
@@ -92,7 +92,7 @@
 \end{tabular}
 
 \bigskip
-Операции над значениями этих типов определены в (\See{expr:operators}).
+Операции над значениями этих типов определены в (\See{expr:unary-ops}, \See{expr:binary-ops}).
 
 \hypertarget{type-ref}{%
 \subsection{Указание типа}\label{decls:type-ref}}
