--- a/doc/report/5-выражения.tex
+++ b/doc/report/5-выражения.tex
@@ -1,34 +1,34 @@
 \hypertarget{expressions}{%
 \section{Выражения}\label{expr:chapter}}
 
-Выражение определяет вычисление значения путем применения операторов и функций к операндам. 
+Выражение определяет вычисление значения путем применения операций к операндам. 
 
 \begin{Grammar}
 Выражение
     : Унарное-выражение
-	| Выражение Бинарная-операция Выражение
+    | Выражение Бинарная-операция Выражение
 
 Унарное-выражение
-	: Первичное-выражение
-	| Унарная-операция Унарное-выражение
+    : Первичное-выражение
+    | Унарная-операция Унарное-выражение
 \end{Grammar}    
 
 \hypertarget{primary-expr}{%
 \subsection{Первичные выражения}\label{expr:primary-expr}}
 
-Первичные выражения - это выражения, которые являются операндами унарных и бинарных операций.
+Первичные выражения - это выражения, которые являются операндами унарных (\See{expr:unary-ops}) и бинарных (\See{expr:binary-ops}) операций .
 
 \begin{Grammar}
 Первичное-выражение
     : Операнд
-	( Доступ
-	| Индексация
-	| Преобразование
-	| Вызов
-	| Конструктор-вектора
-	| Конструктор-класса
-	| Отмена-может-быть
-	)*
+    ( Доступ
+    | Индексация
+    | Преобразование
+    | Вызов
+    | Конструктор-вектора
+    | Конструктор-класса
+    | Подтверждение-типа
+    )*
 \end{Grammar}    
 
 \begin{Trivil}
@@ -116,7 +116,7 @@
     \verb|индекс| должен быть выражением типа \verb|Цел64| или \verb|Байт|
 \end{d_itemize}
 
-Если во время исполнения индекс выходит за границы вектора или параметра (индекс < 0 | индекс >= длина), происходит \emph{авария}.
+Если во время исполнения индекс выходит за границы вектора или параметра (индекс < 0 | индекс >= длина), происходит \emph{авария} (\See{stmt:crash}).
 
 Типом выражения индексации является тип элемента вектора, если индексируется вектор или тип вариативного параметра, если индексируется вариативный параметр.
 
@@ -311,8 +311,101 @@
 пусть Некто := Человек{возраст: 25}
 \end{SampleErr}
 
-\hypertarget{operators}{%
-\subsection{Операции}\label{expr:operators}}
+\hypertarget{confirmation}{%
+\subsection{Подтверждение типа}\label{expr:confirmation}}
+
+Подтверждение типа применяется к первичному выражению, которое должно быть \emph{может быть} типа (\See{decls:mb-types}). 
+
+\begin{Grammar}
+Подтверждение-типа: '^'
+\end{Grammar}   
+
+Если значение первичного выражение, тип которого есть \keyword{мб} \emph{Т} равно \verb+'пусто'+, 
+то происходит \emph{авария} (\See{stmt:crash}), иначе тип выражения становится равным \emph{Т}.
+
+
+\begin{Trivil}[vspace=2pt]
+пусть кличка: мб Строка = пусто
+...
+кличка = "Мурка"
+...
+напечатать(кличка^)
+\end{Trivil}
+
+\hypertarget{unary-ops}{%
+\subsection{Унарные операции}\label{expr:unary-ops}}
+
+\begin{Grammar}
+Унарная-операция: '-' | '~'
+\end{Grammar}   
+
+\begin{tabular}[c]{c|l|l}
+\textbf{Операция} & \textbf{Тип Операнда} &  \textbf{Тип результата} \\ 
+\hline
+\multirow{3}*{-} & Цел64 & Цел64 \\ 
+& Слово64 & Слово64 \\
+& Вещ64 & Вещ64 \\
+\hline
+\verb|~| (not) & Лог & Лог \\
+\hline
+\end{tabular}
+
+\bigskip
+Унарные операторы имеют приоритет выше, чем бинарные, то есть выражение \verb|-х + 1| выполняется как \verb|(-х) + 1|.
+
+\hypertarget{binary-ops}{%
+\subsection{Бинарные операции}\label{expr:binary-ops}}
+
+\begin{Grammar}
+Бинарная-операция
+    : Арифметические
+    | Сравнения
+    | Логические
+    | Битовые
+Арифметические: '+' | '-' | '*' | '/' | '%'
+Сравнения: '=' | '#' | '<' | '<=' | '>' | '>='
+Логические: '|' | '&' 
+Битовые: TBD
+\end{Grammar} 
+
+\TBD: Определить множество и знаки битовых операций.
+
+\hypertarget{ops-precedence}{%
+\subsubsection{Приоритеты операции}\label{expr:ops-precedence}}
+
+Язык определяется пять уровней приоритета для бинарных операций. Операции умножения имеют наивысший приоритет, а операция логическое ИЛИ (\verb+|+) имеет самый низкий приоритет.
+
+\begin{tabular}[c]{c|l}
+\textbf{Приоритет} & \textbf{Операция} \\ 
+\hline
+5 &   \verb#* / %# \\
+4 &   \verb#+ -# \\
+3 &   \verb|= # < <= > >=| \\
+2 &   \verb#&# \\
+1 &  \verb#|# \\
+\hline
+\end{tabular}
+
+\bigskip
+Бинарные операции с одинаковым приоритетом ассоциируются слева направо. Например, \verb|x / y * z| эквивалентно \verb|(x / y) * z|.
+
+\hypertarget{ops-arithmetic}{%
+\subsubsection{Арифметические операции}\label{expr:ops-arithmetic}}
+
+Арифметические операторы применяются к числовым операндам, выдают результат того же типа, что и тип операндов.
+Типы левого и правого операнда должны совпадать. 
+
+\bigskip
+\begin{tabular}[c]{c|l|l}
+\textbf{Операция} & \textbf{Действие} & \textbf{Разрешенные типы} \\ 
+\hline
+\verb|+| & сумма & Байт, Цел64, Слово64, Вещ64 \\
+\verb|-| &  разница & Байт, Цел64, Слово64, Вещ64 \\
+\verb|*| & произведение & Байт, Цел64, Слово64, Вещ64 \\
+\verb|/| &  деление & Байт, Цел64, Слово64, Вещ64\\
+\% & остаток от деления  &  Байт, Цел64, Слово64 \\
+\hline
+\end{tabular}
 
 \hypertarget{mb-ops}{%
 \subsection{Операции для объектов может быть типа}\label{expr:mb-ops}}
@@ -320,3 +413,4 @@
 
 \hypertarget{const-expr}{%
 \subsection{Константные выражения}\label{expr:const-expr}}
+
