--- a/doc/report/6-операторы.tex
+++ b/doc/report/6-операторы.tex
@@ -14,4 +14,4 @@
 \subsection{Оператор вернуть}\label{stmt:return}}
 
 \hypertarget{crash}{%
-\subsection{Оператор авария}\label{stmt:crash}}
+\subsection{Оператор авария и аварийное завершение}\label{stmt:crash}}
