--- a/doc/report/7-стдфунк.tex
+++ b/doc/report/7-стдфунк.tex
@@ -1,5 +1,5 @@
 \hypertarget{stdfuncs}{%
-\section{Стандартные функции}\label{stdfuncs:chapter}}
+\section{Стандартные функции и методы}\label{stdfuncs:chapter}}
 
 \hypertarget{stdlen}{%
 \subsection{Длина}\label{stdfuncs:stdlen}}
