--- a/doc/report/4-описания.tex
+++ b/doc/report/4-описания.tex
@@ -324,13 +324,12 @@
 Для объекта типа \emph{мб Т} определены следующие действия:
 \begin{d_itemize}
 \item
-    Присваивание объекту значения 'пусто' или значения типа Т
+    Присваивание объекту значения 'пусто' или значения типа Т (\See{compat:assign})
 \item
-    Сравнение на равно/не равно с 'пусто'  или с другим объектом типа \emph{мб Т}
+    Сравнение на равно/не равно с 'пусто'  или с другим объектом типа \emph{мб Т} (\See{expr:ops-comparison})
 \item
-    Операция \verb+'^'+ перехода от значения типа \emph{мб Т} к значению типа \emph{Т}
+    Операция подтверждения типа \verb+'^'+ (\See{expr:confirmation}), позволяющая перейти от значения типа \emph{мб Т} к значению типа \emph{Т}
 \end{d_itemize}
-Подробнее в  \See{expr:mb-ops}, \See{compat:assign}.
 
 \bigskip
 Пример указания типа и использования объекта:
