--- a/doc/report/5-выражения.tex
+++ b/doc/report/5-выражения.tex
@@ -373,7 +373,7 @@
 \hypertarget{ops-precedence}{%
 \subsubsection{Приоритеты операции}\label{expr:ops-precedence}}
 
-Язык определяется пять уровней приоритета для бинарных операций. Операции умножения имеют наивысший приоритет, а операция логическое ИЛИ (\verb+|+) имеет самый низкий приоритет.
+Язык определяется пять уровней приоритета для бинарных операций. Операции умножения имеют самый высокий приоритет, а операция логическое ИЛИ (\verb+|+) имеет самый низкий приоритет.
 
 \begin{tabular}[c]{c|l}
 \textbf{Приоритет} & \textbf{Операция} \\ 
@@ -407,10 +407,51 @@
 \hline
 \end{tabular}
 
-\hypertarget{mb-ops}{%
-\subsection{Операции для объектов может быть типа}\label{expr:mb-ops}}
 
+\hypertarget{ops-comparison}{%
+\subsubsection{Операции сравнения}\label{expr:ops-comparison}}
+
+Операции сравнения выдают результат типа Лог. 
+
+Все операции сравнения \verb|'=', '#', '<', '<=', '>', '>='| применимы к операндам типов Байт, Цел64, Слово64, Цел64 и Символ. 
+Типы левого и правого операнда, при этом, должны совпадать.
+
+Операции \verb|'=', '#'| также применимы в следующих случаях:
+
+\smallskip
+\begin{tabular}[c]{r|l}
+\textbf{Тип левого операнда} & \textbf{Правый операнд}  \\ 
+\hline
+Строка & операнд типа Строка \\
+класс \emph{Т} & операнд типа \emph{Т} \\
+\keyword{мб} \emph{Т} & 'пусто' или операнд типа \keyword{мб} \emph{Т} \\
+\hline
+\end{tabular}
+
+\hypertarget{ops-logical}{%
+\subsubsection{Логические операции}\label{expr:ops-logical}}
+
+Операции \emph{логическое ИЛИ} (\verb+|+) и \emph{логическое И} (\verb+&+) применимы к операндам типа Лог и выдают результат типа Лог.
+
+\smallskip
+\begin{tabular}[c]{rcl}
+\verb+а | б+  & означает & если а, то истина, иначе б \\
+\verb+а & б+  & означает & если а, то б,  иначе ложь \\
+\end{tabular}
+
+\hypertarget{ops-bitwise}{%
+\subsubsection{Битовые операции}\label{expr:ops-bitwise}}
+
+\TBD: будут определены позже.
 
 \hypertarget{const-expr}{%
 \subsection{Константные выражения}\label{expr:const-expr}}
+
+Константные выражения - это выражения, которые могут быть вычислены во время компиляции.
+
+Минимальные требования к компилятору языка \thelang{}: компилятор должен вычислять выражение, состоящее из одного операнда, который является литералом или 
+идентификатором, обозначающим константу.
+
+
+
 
