--- a/doc/report/4-описания.tex
+++ b/doc/report/4-описания.tex
@@ -182,7 +182,7 @@
 
 Каждая переменная должна быть явно проинициализирована.
 Если инициализация задана через лексему '=', то значениe переменной не может быть изменено (\emph{переменная с единственным присваиванием}), 
-если же в инициализации используется лексема ':=', то значение может быть изменено (\See{stmt:assignment}, \See{stmt:inc-dec}).
+если же в инициализации используется лексема ':=', то значение может быть изменено (\See{stmt:assignment}, \See{stmt:inc-dec}), а переменная называется \emph{изменяемой}.
 
 Явное указание типа:
 \begin{Trivil}[vspace=2pt]
@@ -272,7 +272,7 @@
 Если тип поля не указан, то он устанавливается равным типу выражения (\See{expr:chapter}).
 
 \hypertarget{fields-init}{%
-\subsection{Инициализация полей}\label{decls:fields-init}}
+\subsubsection{Инициализация полей}\label{decls:fields-init}}
 
 Каждое поле класса должно быть явно проинициализировано.
 Если инициализация задана через лексему '=', то значениe поля не может быть изменено (\emph{поле с единственным присваиванием}), 
