--- a/doc/report/6-операторы.tex
+++ b/doc/report/6-операторы.tex
@@ -1,11 +1,98 @@
 \hypertarget{statements}{%
 \section{Операторы}\label{stmt:chapter}}
 
+Операторы задают действия.
+
+\begin{Grammar}
+Оператор
+    : Локальное-описание
+    | Простой-оператор
+    | Оператор-если
+    | Оператор-надо
+    | Оператор-когда
+    | Оператор-пока
+    | Оператор-вернуть
+    | Оператор-прервать
+    | Оператор-авария
+
+Простой-оператор
+    : Оператор-выражение 
+    | Оператор-присваивания
+    | Инкремент 
+    | Декремент
+\end{Grammar}
+
 \hypertarget{blocks}{%
 \subsection{Блоки}\label{stmt:blocks}}
 
+Операторы сгрупированы в \emph{Блоки}, которые задают последовательность действий для функций и методов (\See{decls:functions}, \See{decls:methods}) и входа в модуль (\See{mods:entry}).
+Блок - это, возможно, пустая последовательность операторов, которые могут включать локальные описания.
+
+
+\begin{Grammar}
+Блок: '{' Список-операторов? '}'
+Список-операторов: Оператор (Разделитель Оператор)* 
+\end{Grammar}
+
+\hypertarget{local-decls}{%
+\subsection{Локальные описания}\label{stmt:local-decls}}
+
+Локальное описание определяет идентификатор, для которого областью действия (\See{decls:scopes}) является часть блока, 
+от точки завершения описания до завершающей скобки блока, исключая вложенные блоки, в которых описан такой же идентификатор.
+
+\begin{Grammar}
+Локальное-описание: Описание-переменной
+\end{Grammar}
+
+Для локальных переменных не может быть задана \emph{поздняя инициализация} (\See{decls:variables}).
+
+\TBD: Нужны ли локальные константы? Или это задача оптимизации?
+
+\hypertarget{expr-stmt}{%
+\subsection{Выражение, как оператор}\label{stmt:expr-stmt}}
+
+Выражение, являющееся вызовом функции или метода, кроме вызова стандартных функций (\See{stdfuncs:chapter}), может быть использовано как оператор. 
+Результат вызова при этом игнорируется. 
+
+\begin{Grammar}
+Оператор-выражение: Выражение
+\end{Grammar}
+
+\begin{Trivil}
+напечатать("Привет")
+Факториал(5)
+\end{Trivil}
+
+Не могут быть использованы, в качестве оператора:
+\begin{SampleErr}[vspace=2pt]
+1 + 1
+длина(а)
+\end{SampleErr}
+
 \hypertarget{assignment}{%
 \subsection{Оператор присваивания}\label{stmt:assignment}}
+
+Присваивание заменяет текущее значение, хранящееся в переменной, новым значением, заданным выражением.
+
+\begin{Grammar}
+Оператор-присваивания: Выражение ':=' Выражение
+\end{Grammar}
+
+Выражение в левой части должно быть \emph{изменяемым}:
+
+\smallskip
+\begin{tabular}[l]{l|l|p{4.8cm}}
+ \multicolumn{2}{l|}{\textbf{Левое выражение}}   & \textbf{Условие}  \\ 
+\hline
+Имя объекта  & \verb+пер+ или \verb+мод.пер+ &  \emph{пер} - это изменяемая переменная (\See{decls:variables}) \\
+Доступ к полю & \verb+что-то.поле+ & \emph{что-то} - это изменяемое выражение, \emph{поле} - это изменяемое поле (\See{decls:fields-init}) \\
+Индексация & \verb+что-то[индекс]+ & \emph{что-то} - это изменяемое выражение \\
+Преобразование & \verb+что-то(:Тип)+ & \emph{что-то} - это изменяемое выражение \\
+\hline
+\end{tabular}
+
+Выражение в правой части должно быть \emph{совместимо по присваиванию} с типом левого выражение (\See{compat:assign}).
+
 
 \hypertarget{inc-dec}{%
 \subsection{Инкремент и декремент}\label{stmt:inc-dec}}
