--- a/doc/report/4-описания.tex
+++ b/doc/report/4-описания.tex
@@ -205,6 +205,8 @@
 \end{SampleErr}
 
 Если в инициализации задано \emph{Выражение}, то начальным значение переменной является значение выражения.
+Если при этом тип переменной явно задан, то выражение должно быть \emph{совместимо по присваиванию} с типом переменной (\See{compat:assign}).
+
 Вместо выражения может быть указано ключевое слово \keyword{позже}, это \emph{поздняя инициализация}. 
 Такая форма инициализации разрешена только для переменных уровня модуля, при этом тип таких переменных, должен быть явно указан.
 
@@ -276,9 +278,11 @@
 
 Каждое поле класса должно быть явно проинициализировано.
 Если инициализация задана через лексему '=', то значениe поля не может быть изменено (\emph{поле с единственным присваиванием}), 
-если же в инициализации используется лексема ':=', то значение поля может быть изменено  (\See{stmt:assignment}, \See{stmt:inc-dec}).
+если же в инициализации используется лексема ':=', то значение поля может быть изменено  (\See{stmt:assignment}, \See{stmt:inc-dec}), а поле называется \emph{изменяемым}.
 
 Если в инициализации задано \emph{Выражение}, то начальным значение поля является значение выражения.
+Если при этом тип поля явно задан, то выражение должно быть \emph{совместимо по присваиванию} с типом поля (\See{compat:assign}).
+
 Вместо выражения может быть указано ключевое слово \keyword{позже}, это \emph{поздняя инициализация}. 
 Такая форма инициализации разрешена только для полей, тип которых явно указан.
 
