--- a/doc/report/5-выражения.tex
+++ b/doc/report/5-выражения.tex
@@ -201,7 +201,7 @@
 Каждый аргумент в вызове является \emph{выражением}. 
 Если для вариативного параметра задан единственный аргумент, то после выражения может стоять знак операции \verb+...+, делающий  \emph{развернутое выражение} (\See{expr:call-unfold}).
 
-Для всех других аргументов, выражение должно быть совместимо по присваиванию с типом параметра (\See{compat:assign}).
+Для всех других аргументов, выражение должно быть \emph{совместимо по присваиванию} с типом параметра (\See{compat:assign}).
 
 Типом выражения вызова является тип результата. Если в сигнатуре функции или метода тип результата отсутствует, то вызов не может быть операндом для любой операции.
 
@@ -261,7 +261,7 @@
 \item
     \emph{Индекс-элемента} должен быть выражением типа \verb|Цел64| или \verb|Байт|
 \item
-    \emph{Значение} должен быть выражением, совместимым по присваиванию с типом элемента вектора (\See{compat:assign}).
+    \emph{Значение} должно быть выражением, \emph{совместимым по присваиванию} с типом элемента вектора (\See{compat:assign}).
 \end{d_itemize}
 
 Если хотя бы для одного элемента конструктора задан \emph{Индекс-элемента}, то он должен быть задан для всех элементов конструктора.
@@ -287,7 +287,8 @@
 \end{Grammar}   
 
 Для каждой \emph{Пары} идентификатор должен обозначать поле конструируемого класса. 
-В результирующем экземпляре значением этого поля будет значение выражения \emph{Значение}.
+В результирующем экземпляре значением этого поля будет значение выражения \emph{Значение}.    
+\emph{Значение} должно быть выражением, \emph{совместимым по присваиванию} с типом поля (\See{compat:assign}).
 
 Указание нескольких значений для одного идентификатора поля является ошибкой.
 
