--- a/doc/report/6-операторы.tex
+++ b/doc/report/6-операторы.tex
@@ -63,7 +63,7 @@
 Факториал(5)
 \end{Trivil}
 
-Не могут быть использованы, в качестве оператора:
+Не могут быть использованы в качестве оператора:
 \begin{SampleErr}[vspace=2pt]
 1 + 1
 длина(а)
@@ -91,11 +91,59 @@
 \hline
 \end{tabular}
 
+\bigskip
 Выражение в правой части должно быть \emph{совместимо по присваиванию} с типом левого выражение (\See{compat:assign}).
 
+\begin{Trivil}
+пусть ц := 0
+пусть байты := Байты[1, 2, 3]
+ц := 2
+байты[ц] = 5
+\end{Trivil}
+
+Ошибка присваивания в неизменяемое выражение:
+\begin{SampleErr}[vspace=2pt]
+пусть ц = 0
+ц := 2
+\end{SampleErr}
 
 \hypertarget{inc-dec}{%
 \subsection{Инкремент и декремент}\label{stmt:inc-dec}}
+
+Операторы \emph{Инкремент} ('++') и \emph{Декремент} ('--') увеличивают или уменьшают свои операнды на 1. 
+
+\begin{Grammar}
+Инкремент: Выражение '++'
+Декремент: Выражение '--'
+\end{Grammar}
+
+Как и в случае присваивания (\See{stmt:assignment}), выражение должно быть \emph{изменяемым}.
+Тип выражения должен быть одного из типов: Байт, Цел64, Слово64.
+
+\begin{Trivil}
+пусть ц := 1
+пусть байты := Байты[1, 2, 3]
+байты[ц]++
+\end{Trivil}
+
+\hypertarget{if-stmt}{%
+\subsection{Оператор 'если'}\label{stmt:if-stmt}}
+
+Оператор \keyword{если} определяет условное выполнение двух ветвей в соответствии со значением логического выражения. 
+Если выражение принимает значение \verb+истина+, выполняется Блок первой веткви, в противном случае, выполняется ветвь \keyword{иначе}, если она задана.
+
+\begin{Grammar}
+Оператор-если: 
+    'если' Выражение Блок ('иначе' (Оператор-если | Блок)?
+\end{Grammar}
+
+\begin{Trivil}
+если ц > макс { ц := макс }
+
+если Буква?(сим) { Имя() }
+иначе если Цифра?(сим) { Число() }
+иначе { Ошибка!() }
+\end{Trivil}
 
 \hypertarget{return}{%
 \subsection{Оператор вернуть}\label{stmt:return}}
