--- a/doc/report/6-операторы.tex
+++ b/doc/report/6-операторы.tex
@@ -178,6 +178,31 @@
 надо число > 1 иначе вернуть 1
 \end{Trivil}
 
+\hypertarget{when-stmt}{%
+\subsection{Оператор 'когда' или оператор выбора}\label{stmt:when-stmt}}
+
+Оператор \keyword{когда} выбирает одну ветвь выполнения из нескольких вариантов, в соответствии со значением выражения.
+
+\bigskip
+\TBD: Добавить оператор выбора по типу.
+
+\begin{Grammar}
+Оператор-когда: 
+    'когда' Выражение '{'
+    Вариант*
+    ('иначе' Список-операторов?)?
+    '}'
+Вариант:
+    'есть' Выражение (',' Выражение)* ':' Список-операторов?
+\end{Grammar}
+
+При выполнении оператора \keyword{когда} вычисляется \emph{Выражение},
+затем выражения в \emph{Вариантах} вычисляются слева направо и сверху вниз. 
+Как только значение выражения \emph{Варианта} стало равным значению первого выражения, выполняется список операторов этого \emph{Варианта}.
+Остальные варинты игнорируются.
+
+Если ни один из вариантов не выполнен, и есть ветка \keyword{иначе}, выполняется список операторов этой ветки.
+
 \hypertarget{return-stmt}{%
 \subsection{Оператор 'вернуть'}\label{stmt:return-stmt}}
 
