--- a/doc/report/4-описания.tex
+++ b/doc/report/4-описания.tex
@@ -67,7 +67,7 @@
     пусто
 \end{Verbatim}
 
-Стандартные функции (\See{stdfuncs:chapter}):
+Стандартные функции (\See{stdfuncs:std-funcs}):
 \begin{Verbatim}
     длина тег нечто
 \end{Verbatim}
@@ -361,7 +361,7 @@
 
 Вместо тела функции может стоять модификтор (\See{lex:modifiers}) \verb|@внеш|, см. \See{decls:extern-fn}.
 
-Если у функции задан тип результата, тело функции должно завершаться операторами \keyword{вернуть} (\See{stmt:return}) или \keyword{авария} (\See{stmt:crash}).
+Если у функции задан тип результата, тело функции должно завершаться операторами \keyword{вернуть} (\See{stmt:return-stmt}) или \keyword{авария} (\See{stmt:crash-stmt}).
 
 \begin{Trivil}
 фн Факториал(ц: Цел64): Цел64 {
