--- a/doc/report/5-выражения.tex
+++ b/doc/report/5-выражения.tex
@@ -116,7 +116,7 @@
     \verb|индекс| должен быть выражением типа \verb|Цел64| или \verb|Байт|
 \end{d_itemize}
 
-Если во время исполнения индекс выходит за границы вектора или параметра (индекс < 0 | индекс >= длина), происходит \emph{авария} (\See{stmt:crash}).
+Если во время исполнения индекс выходит за границы вектора или параметра (индекс < 0 | индекс >= длина), происходит \emph{авария} (\See{stmt:crash-stmt}).
 
 Типом выражения индексации является тип элемента вектора, если индексируется вектор или тип вариативного параметра, если индексируется вариативный параметр.
 
@@ -182,7 +182,7 @@
 Вызов применяется к первичному выражению. Это выражение
 \begin{d_itemize}
 \item
-    является идентификатором стандартной функции (\See{stdfuncs:chapter})
+    является идентификатором стандартной функции (\See{stdfuncs:std-funcs})
 \item
     или обозначает функцию, тогда это \emph{вызов функции}
 \item
@@ -322,7 +322,7 @@
 \end{Grammar}   
 
 Если значение первичного выражение, тип которого есть \keyword{мб} \emph{Т} равно \verb+'пусто'+, 
-то происходит \emph{авария} (\See{stmt:crash}), иначе тип выражения становится равным \emph{Т}.
+то происходит \emph{авария} (\See{stmt:crash-stmt}), иначе тип выражения становится равным \emph{Т}.
 
 
 \begin{Trivil}[vspace=2pt]
