--- a/doc/report/6-операторы.tex
+++ b/doc/report/6-операторы.tex
@@ -51,7 +51,7 @@
 \hypertarget{expr-stmt}{%
 \subsection{Выражение, как оператор}\label{stmt:expr-stmt}}
 
-Выражение, являющееся вызовом функции или метода, кроме вызова стандартных функций (\See{stdfuncs:chapter}), может быть использовано как оператор. 
+Выражение, являющееся вызовом функции или метода, кроме вызова стандартных функций (\See{stdfuncs:std-funcs}), может быть использовано как оператор. 
 Результат вызова при этом игнорируется. 
 
 \begin{Grammar}
@@ -184,7 +184,7 @@
 Оператор \keyword{когда} выбирает одну ветвь выполнения из нескольких вариантов, в соответствии со значением выражения.
 
 \bigskip
-\TBD: Добавить оператор выбора по типу.
+\TBD: Добавить предикатный и оператор выбора по типу?
 
 \begin{Grammar}
 Оператор-когда: 
@@ -200,15 +200,101 @@
 затем выражения в \emph{Вариантах} вычисляются слева направо и сверху вниз. 
 Как только значение выражения \emph{Варианта} стало равным значению первого выражения, выполняется список операторов этого \emph{Варианта}.
 Остальные варинты игнорируются.
-
 Если ни один из вариантов не выполнен, и есть ветка \keyword{иначе}, выполняется список операторов этой ветки.
 
-\hypertarget{return-stmt}{%
-\subsection{Оператор 'вернуть'}\label{stmt:return-stmt}}
+Тип каждого выражения в вариантах должен быть равен типу первого выражения (\See{compat:equal-types}).
+
+\begin{Trivil}
+когда х {
+есть 0: вернуть "ничего"
+есть 1: вернуть "один"
+есть 2: вернуть "два"
+иначе вернуть "много"
+}
+\end{Trivil}
+
+
+\hypertarget{while-stmt}{%
+\subsection{Оператор цикла 'пока' }\label{stmt:while-stmt}}
+
+Оператор \keyword{пока} определяет повторное выполнение блока до тех пор, пока значение логического выражение равно \verb+истина+. 
+Выражение вычисляется перед каждой итерацией.
+
+\begin{Grammar}
+Оператор-пока: 'пока' Выражение Блок 
+\end{Grammar}
+
+\begin{Trivil}
+пока а < б {
+    а := а * 2
+}
+\end{Trivil}
 
 \hypertarget{break-stmt}{%
 \subsection{Оператор 'прервать'}\label{stmt:break-stmt}}
 
+Оператор \keyword{прервать} завершает выполнение самого внутреннего оператора цикла в рамках одной и той же функции.
+
+\begin{Grammar}
+Оператор-прервать: 'прервать' 
+\end{Grammar}
+
+\begin{Trivil}
+пока истина {
+    а := а * 2
+    если а > б { прервать }
+}
+\end{Trivil}
+
+\hypertarget{return-stmt}{%
+\subsection{Оператор 'вернуть'}\label{stmt:return-stmt}}
+
+Оператор \keyword{вернуть} завершает выполнение тела функции, метода или входа, и, возможно, возращает значение.
+
+\begin{Grammar}
+Оператор-вернуть: 'вернуть'  (Выражение | Разделитель)
+\end{Grammar}
+
+Если оператор \keyword{вернуть} используется в теле входа или в теле функции или метода, в сигнатуре которых не указан тип результата, 
+то выражение в операторе должно отсутствовать.
+
+И наоборот, если в оператор используется в теле функции или метода, в сигнатуре которых указан тип результата, выражение должно быть и 
+оно должно быть \emph{совместимо по присваиванию} с типом результата (\See{compat:assign}).
+
+\begin{Trivil}
+фн Факториал(ц: Цел64): Цел64 {
+    если ц <= 1 { вернуть 1 }
+    вернуть ц * Факториал(ц - 1)
+}
+\end{Trivil}
 
 \hypertarget{crash-stmt}{%
 \subsection{Оператор 'авария' и аварийное завершение}\label{stmt:crash-stmt}}
+
+Оператор \keyword{авария} запускает аварийную ситуация, которая, обычно, приводит к аварийному завершению программы. 
+
+\begin{Grammar}
+Оператор-вернуть: 'авария' '(' Выражение ')'
+\end{Grammar}
+
+Тип выражения должен быть Строка. Значение этого выражения используется в сообщении об аварийной ситуации.
+
+Кроме явного запуска аварийной ситуации, аварийная ситуация может быть запущена неявно, в следующих случаях:
+\begin{d_itemize}
+\item
+    Выход индекса за пределы вектора при индексации
+\item
+    Операция подтверждения типа выполнена над объектом со значением 'пусто'
+\item
+    Недопустимое преобразования типа 
+\item
+    Недопустимая последовательность байт в кодировке UTF-8
+\item
+    Невозможность выделения памяти для динамического объекта
+\item
+    Нереализованная возможность в системе поддержки выполнения
+\end{d_itemize}
+
+\bigskip
+Язык \thelang{} не содержит средств перехвата аварийной ситуации или восстановления после него. 
+Такие средства могут быть добавлены на уровне библиотек.
