--- a/doc/report/7-стдфунк.tex
+++ b/doc/report/7-стдфунк.tex
@@ -1,11 +1,14 @@
 \hypertarget{stdfuncs}{%
 \section{Стандартные функции и методы}\label{stdfuncs:chapter}}
 
+\hypertarget{std-funcs}{%
+\subsection{Стандартные функции}\label{stdfuncs:std-funcs}}
+
 \hypertarget{stdlen}{%
-\subsection{Длина}\label{stdfuncs:stdlen}}
+\subsubsection{Длина}\label{stdfuncs:stdlen}}
 
 \hypertarget{stdpoly}{%
-\subsection{Функции для полиморфных параметров}\label{stdfuncs:stdpoly}}
+\subsubsection{Функции для полиморфных параметров}\label{stdfuncs:stdpoly}}
 
 \hypertarget{stdvector}{%
 \subsection{Встроенные методы для векторов}\label{stdfuncs:stdvector}}
