--- a/doc/report/4-описания.tex
+++ b/doc/report/4-описания.tex
@@ -381,6 +381,9 @@
 
 Последний параметр функции может иметь тип с префиксом \verb|...| - это \emph{вариативный параметр}. Функция с таким параметром может быть вызвана с нулем или более аргументов для этого параметра. Если тип вариативного парметра указан как \emph{Т}, то в теле функции типом  параметра является \verb+[]T+.
 
+\hypertarget{params-poly}{%
+\subsubsection{Полиморфные параметры}\label{decls:params-poly}}
+
 Если вместо типа параметра указан символ \verb|'*'|, то параметр называется полиморфным.
 Аргумент, соотвествующий этому параметру, может быть выражением любого типа. 
 Для вариативного полиморфного параметра каждый аргумент может быть выражением любого типа. 
