--- a/doc/report/7-стдфунк.tex
+++ b/doc/report/7-стдфунк.tex
@@ -7,8 +7,53 @@
 \hypertarget{stdlen}{%
 \subsubsection{Длина}\label{stdfuncs:stdlen}}
 
+Стандартная функция \verb+длина+ возвращает длину строк, векторов и вариативных параметров. Тип результата: Цел64.
+
+Длина строки считается в символах. Для остальных типов выдается число элементов.
+
+\begin{Trivil}
+    пусть д1 = длина("Привет") // равно 6
+
+    пусть д2 = длина("Привет"(:Байты)) // равно 12
+\end{Trivil}
+
 \hypertarget{stdpoly}{%
 \subsubsection{Функции для полиморфных параметров}\label{stdfuncs:stdpoly}}
+
+Стандартные функции \verb+тег+ и \verb+нечто+ предназначены для работы с полиморфными параметрами (\See{decls:params-poly})
+
+Аргумент функция \verb+тег+ может быть типом или полиморфным параметром или элементом вариативного полиморфного параметра. 
+Для каждого типа определен его \emph{Тег}, который является постоянным объектом времени исполнения. 
+Постоянный, в данном контексте, контексте, означает, что Тег типа не меняется во время исполнения программы.
+Тег представлен значением типа Слово64.
+
+\bigskip
+\begin{tabular}[c]{p{4cm}|l|l}
+ \multicolumn{2}{l|}{\textbf{Вид аргумента}}   & \textbf{Результат}  \\ 
+\hline
+предопределенный тип & тег(Цел64) &  Тег указанного типа \\
+описанный тип & тег(Байты) &  Тег указанного типа \\
+полиморфный параметр & тег(п) & Тег параметра \\
+элемент вариативного полиморфного параметра & тег(п[номер]) & Тег элемента \\
+\hline
+\end{tabular}
+
+\bigskip
+Аргумент функция \verb+нечто+ должен быть полиморфным параметром или элементом вариативного полиморфного параметра. 
+Функция выдает результат типа Слово64, которые является скрытым представлением значения переданного в полиморфный параметр .
+
+К результату функции \verb+нечто+ может применяется преобразование типа (\See{expr:conversion}) или \emph{осторожное} преобразование типа (\See{unsafe:conversions}).
+
+\begin{Trivil}
+фн Что это?(п: *) {
+    если тег(п) = тег(Цел64) { 
+        вывод.ф("это число: %v", нечто(п)(:Цел64)) 
+    }
+    иначе { 
+        вывод.ф("это не число") 
+    }
+}
+\end{Trivil}
 
 \hypertarget{stdvector}{%
 \subsection{Встроенные методы для векторов}\label{stdfuncs:stdvector}}
