заготовка добавить, заполнить

--- a/doc/report/7-стдфунк.tex
+++ b/doc/report/7-стдфунк.tex
@@ -58,3 +58,19 @@
 \hypertarget{stdvector}{%
 \subsection{Встроенные методы для векторов}\label{stdfuncs:stdvector}}
 
+Для всех типов векторов определены стандартные методы:
+\begin{d_itemize}
+\item
+    \verb+добавить+
+\item
+    \verb+заполнить+
+\end{d_itemize}
+
+
+\hypertarget{vector-append}{%
+\subsubsection{Метод добавить}\label{stdfuncs:vector-append}}
+
+
+\hypertarget{vector-fill}{%
+\subsubsection{Метод заполнить}\label{stdfuncs:vector-fill}}
+
