методы для векторов

--- a/doc/report/7-стдфунк.tex
+++ b/doc/report/7-стдфунк.tex
@@ -66,11 +66,43 @@
     \verb+заполнить+
 \end{d_itemize}
 
+\bigskip
+\TBD: Уточнить семантику и набор методов.
 
 \hypertarget{vector-append}{%
 \subsubsection{Метод добавить}\label{stdfuncs:vector-append}}
+
+Метод \verb+добавить+ можно применить к любому вектору. Если вектор типа \verb+[]T+, то метод можно рассматривать, как описанный с заголовком:
+\begin{Trivil}
+фн (в: []T) добавить(аргументы: ...T) 
+\end{Trivil}
+
+Это означает, что в вызове метода можно указать любое количество аргументов типа \verb+T+ или одно \emph{развернутое выражение} (\See{expr:call}).
+
+Вызов метода добавляет к вектору указанные аргументы.
+
+\begin{Trivil}
+тип Числа = []Цел64
+
+пусть фиб = Числа[1, 1]
+фиб.добавить(2, 3, 5)
+\end{Trivil}
 
 
 \hypertarget{vector-fill}{%
 \subsubsection{Метод заполнить}\label{stdfuncs:vector-fill}}
 
+Метод \verb+заполнить+ можно применить к любому вектору. Если вектор типа \verb+[]T+, то метод можно рассматривать, как описанный с заголовком:
+\begin{Trivil}
+фн (в: []T) заполнить(кол-во: Цел64, значение: T) 
+\end{Trivil}
+
+Вызов метода добавляет к вектору \verb+кол-во+ элементов с указанным значением.
+
+Пример создания вектора из 10 пустых строк:
+\begin{Trivil}[vspace=2pt]
+тип Имена = []Строка
+
+пусть имена = Имена[]
+имена.заполнить(10, "")
+\end{Trivil}
