--- a/doc/report/8-модули.tex
+++ b/doc/report/8-модули.tex
@@ -1,13 +1,100 @@
 \hypertarget{modules}{%
 \section{Модули}\label{mods:chapter}}
 
-Заголовок модуля не является описанием, имя модуля не принадлежит никакой области действия. Его цель - идентифицировать файлы, принадлежащие одному и тому же модулю.
+Программа на языке \thelang{} состоит из модулей (единиц компиляции), исходный текст каждого модуля расположен в одном или нескольких исходных файлов.
+
+Каждый исходный файл состоит из заголовка модуля, за которым следует, возможно, пустой список импорта, 
+за которым следует, возможно, пустой набор описаний типов, констант, переменных, функций и методов и, возможно, вход в модуль.
+
+\begin{Grammar}
+Модуль: Исходный-файл+
+Исходный-файл:
+    Заголовок-модуля
+    Список-импорта
+    Описание-или-вход*
+
+Заголовок-модуля:
+    'модуль' Идентификатор Разделитель
+     ('осторожно' Разделитель)?
+
+Описание-или-вход: Описание | Вход
+\end{Grammar} 
+
+\hypertarget{mod-header}{%
+\subsection{Заголовок модуля}\label{mods:mod-header}}
+
+Каждый исходный файл начинается с заголовка модуля. Заголовок содержит идентификтор, который определяет модуль,
+к которому принадлежит файл. Идентификатор не принадлежит никакой области действия и не связан ни с каким объектом.
+
+Заголовок модуля может содержать признак \keyword{осторожно}, который означает, что в исходном файле можно использовать 
+\emph{небезопасные операции} (\See{unsafe:chapter}).
 
 \hypertarget{import}{%
 \subsection{Импорт}\label{mods:import}}
 
-Ошибка компиляции, если знак экспорта указан для идентификатора, описанного не на уровне модуля.
+Наличие импорта в исходном файле указывает, что этот исходный файл, зависит от функциональности импортируемого модуля, и обеспечивает доступ к экспортированным идентификаторам этого модуля.
+
+Каждый импорт содержит путь импорта, указывающий на импортируемый модуль.
+
+\begin{Grammar}
+Список-импорта: Импорт*
+Импорт: 'импорт' Путь-импорта Разделитель
+Путь-импорта: Строковый-литерал
+\end{Grammar} 
+
+\TBD: структура пути.
+
+\TBD: явное задание имени импорта.
+
+\bigskip
+Импорт добавляет описание идентификатора, текстуально равного последнему имени в пути импорта, который будет использоваться для доступа к экспортированным объектам импортиромого модуля. 
+
+\begin{Trivil}
+модуль x
+
+импорт "стд/вывод"
+
+вход {
+    вывод.ф("Привет!")
+}
+\end{Trivil}
+
+
+%Ошибка компиляции, если знак экспорта указан для идентификатора, описанного не на уровне модуля.
 
 \hypertarget{entry}{%
 \subsection{Вход или инициализация модуля}\label{mods:entry}}
+
+Модуль может содержать действия, которые выполняются при инициализации модуля - \emph{вход в модуль}. 
+
+\begin{Trivil}
+Вход: 'вход' Блок
+\end{Trivil}
+
+\TBD: описать: переменные с поздней инициализацией
+\bigskip
+
+Система выполняет должна обеспечивать следующие условия инициализации модуля М:
+\begin{d_itemize}
+\item
+    инициализация модуля выполняется один раз
+\item
+    инициализации М выполняется \textbf{после} инициализации всех модулей, которые импортирует М
+\item
+    инициализации М выполняется \textbf{до} инициализации тех модулей, которые импортируют М
+\end{d_itemize}
+
+\hypertarget{entry}{%
+\subsection{Инициализация и исполнения программы}\label{mods:entry}}
+
+Программа состоит из головного модуля и всех прямо или косвенно импортированных модулей.
+
+Исполнение программы состоит из:
+\begin{d_itemize}
+\item
+    Инициализации всех модулей, импортированных из головного модуля. Это приводит к рекурсивной инициализации всех используемых модулей
+    программы. Для корректной инициализации граф импорта должен быть ациклическим.
+\item
+    И, затем, выполнение входа головного модуля.
+\end{d_itemize}
 
